"This is a master update to all sections, except for SectionV which has not been written yet. It contains all edits made to the main draft thus far. This draft contstitutes a "first draft" for this version of the paper."

--- a/nate-am-review/APR.bib
+++ b/nate-am-review/APR.bib
@@ -1,12 +1,45 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Nathan Scott David Forrest Everrett Johnson at 2019-02-15 10:39:55 -0700 
+%% Created for Nathan Scott David Forrest Everrett Johnson at 2019-02-19 10:01:32 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Homer2019,
+	Author = {Eric R. Homer},
+	Date-Added = {2019-02-19 10:00:40 -0700},
+	Date-Modified = {2019-02-19 10:01:30 -0700},
+	Journal = {Computational Materials Science},
+	Month = {January},
+	Pages = {244-254},
+	Title = {High-throughput simulations for insight into grain boundary structure-property relationships and other complex microstructural phenomena},
+	Volume = {161},
+	Year = {2019}}
+
+@article{Rupp2011,
+	Abstract = {We introduce a machine learning model to predict atomization energies of a diverse set of organic molecules, based on nuclear charges and atomic positions only. The problem of solving the molecular Schr$\backslash$"odinger equation is mapped onto a non-linear statistical regression problem of reduced complexity. Regression models are trained on and compared to atomization energies computed with hybrid density-functional theory. Cross-validation over more than seven thousand small organic molecules yields a mean absolute error of {\~{}}10 kcal/mol. Applicability is demonstrated for the prediction of molecular atomization potential energy curves.},
+	Archiveprefix = {arXiv},
+	Arxivid = {1109.2618},
+	Author = {Rupp, Matthias and Tkatchenko, Alexandre and M{\"{u}}ller, Klaus-Robert and von Lilienfeld, O. Anatole},
+	Date-Added = {2019-02-15 11:16:56 -0700},
+	Date-Modified = {2019-02-15 11:16:56 -0700},
+	Doi = {10.1103/PhysRevLett.108.058301},
+	Eprint = {1109.2618},
+	File = {:Users/njohnson/Documents/Articles/Applied Physics Review/Rupp{\_}Fast and Accurate Modeling of Molecular Atomization Energies with Machine Learning.pdf:pdf},
+	Isbn = {1079-7114 (Electronic)$\backslash$r0031-9007 (Linking)},
+	Issn = {0031-9007},
+	Journal = {Physical Review Letters},
+	Number = {February},
+	Pages = {1--5},
+	Pmid = {22400967},
+	Title = {{Fast and Accurate Modeling of Molecular Atomization Energies with Machine Learning}},
+	Url = {http://arxiv.org/abs/1109.2618{\%}0Ahttp://dx.doi.org/10.1103/PhysRevLett.108.058301},
+	Volume = {208},
+	Year = {2011},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1103/PhysRevLett.108.058301}}
 
 @article{Kang2006,
 	Author = {Kisuk Kang and Ying Shirley Meng and Julien Breger and Clare P. Grey and Gerbrand Ceder},
