--- a/nate-am-review/Main.tex
+++ b/nate-am-review/Main.tex
@@ -1,4 +1,4 @@
-\documentclass[preprint,superscriptaddress,nofootinbib]{revtex4-1}
+\documentclass[twocolumn,superscriptaddress,nofootinbib]{revtex4-1}
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 \usepackage{amsmath}
 \usepackage{amssymb}
@@ -61,13 +61,13 @@ This focused review examines the potential of machine learning in metal AM, high
 
  
 \maketitle
+\tableofcontents
 
-%
-%\input{SectionI/SectionI.tex}
-%\input{SectionII/SectionII.tex}
+\input{SectionI/SectionI.tex}
+\input{SectionII/SectionII.tex}
 \input{SectionIII/SectionIII.tex}
-%\input{SectionIV/SectionIV.tex}
-%\input{SectionV/SectionV.tex}
+\input{SectionIV/SectionIV.tex}
+\input{SectionV/SectionV.tex}
 
 \bibliographystyle{aipnum4-1}
 \bibliography{APR}
