--- a/nate-am-review/Notes/AnnotatedBibliography.tex
+++ b/nate-am-review/Notes/AnnotatedBibliography.tex
@@ -65,6 +65,12 @@ To be organized alphabetically by citation key.
 		\item Alloy Design
 	\end{itemize}}
 	
+	\item \bibentry{Boley2015} \textbf{Calculates absorption of laser energy on metal powder; investigates how distribution of powder impacts laser absorption.
+	\begin{itemize}
+		\item Featurization application 
+		\item Particle size distribution
+	\end{itemize}}
+	
 	\item \bibentry{Boley2016} \textbf{Research article from LLNL on absorptivity measurements of metal powders; has applications to simulation of LPBF process.
 	\begin{itemize}
 		\item Alloy design
@@ -526,8 +532,8 @@ To be organized alphabetically by citation key.
 	\item \bibentry{Wang2017a} \textbf{Use of a high-throughput study to find processing conditions for AM stainless steel that produces a desirable microstructure; obtains the highest ever strength-ductility tradeoff published for 316L SS. \begin{itemize}
 		\item Parametric analysis -- processing parameters (all) $\to$ microstructure \& mechanical properties
 	\end{itemize}}
+
 	
-	\item \bibentry{Wang2018} \textbf{Some type of inverse analysis using a machine learning approach called Materials Genome Integration System Phase and Property Analysis (MIPHA); they use neural networks to design microstructures with desired mechanical properties; does not complete any experimental validation}
 	\item \bibentry{White2000} \textbf{A review of high throughput combinatorial methods in pharmacology.}
 	\item \bibentry{Wilkinson2016} \textbf{An article about the FAIR guiding principles for scientific data.}
 	\item \bibentry{WohlersReport2017} \textbf{An annual report about the industry of additive manfuacturing.}
@@ -574,6 +580,13 @@ To be organized alphabetically by citation key.
 	\end{itemize}}
 	\item \bibentry{Zhang2010} \textbf{A finite element study on temperature history of W-Ni-Fe powders; characterizes thermal history based on layer thickness, scan speed, etc.; compares with experiments.}
 	\item \bibentry{Zhao2017} \textbf{They use HEXRD to characterize phase development in powder bed Ti-6Al-4V.}
+	
+	\item \bibentry{Zhou2009} \textbf{Simulation of power particle packing with different particle size distributions; applications for metrology, rheology of AM.
+	\begin{itemize}
+		\item Featurization
+	\end{itemize}}
+	
+	
 	\item \bibentry{Ziolkowski2014} \textbf{Uses XCT to characterize porosity in SLM parts.}
 	
 	
